<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Foxail Reader</string>
    <string name="title_notice">Notice</string>
    <string name="title_news">News Content</string>
    <string name="title_favo">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="title_exit">Exit</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="button_home">Home</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About</string>
    <string name="button_share">Share</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="msg_loading">Now loading……</string>
    <string name="msg_confirmExit">Do you confirm EXIT?</string>
    <string name="msg_connectServerFailed">Connect server failed!</string>
    <string name="msg_againExit">Press BACK again and EXIT</string>
    <string name="msg_about">About this app</string>

</resources>
