<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/main_menu_next"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/button_next"/>
    <item
        android:id="@+id/main_menu_previous"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText"
        android:title="@string/button_previous"/>
    <item
        android:id="@+id/main_menu_home"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"
        android:title="@string/button_home"/>
    <item
        android:id="@+id/main_menu_refresh"
        android:orderInCategory="4"
        android:showAsAction="ifRoom|withText"
        android:title="@string/button_refresh"/>
    <item
        android:id="@+id/main_menu_settings"
        android:orderInCategory="5"
        android:showAsAction="ifRoom|withText"
        android:title="@string/button_settings"/>
    <item
        android:id="@+id/main_menu_about"
        android:orderInCategory="6"
        android:showAsAction="ifRoom|withText"
        android:title="@string/button_about"/>

</menu>
